[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://scenes/MusicPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Camera2D.gd" type="Script" id=5]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 3.44
glow_strength = 1.03

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="PositionTR" type="Position2D" parent="."]
position = Vector2( 1064, -32 )
scale = Vector2( 0.1, 0.1 )

[node name="PositionTL" type="Position2D" parent="."]
position = Vector2( -32, -32 )
scale = Vector2( 0.1, 0.1 )

[node name="PositionBR" type="Position2D" parent="."]
position = Vector2( 1064, 616 )

[node name="PositionBL" type="Position2D" parent="."]
position = Vector2( -32, 616 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -160.0
margin_top = -104.0
margin_right = 1184.0
margin_bottom = 744.0
color = Color( 0.0588235, 0.00784314, 0.152941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 300 )
scale = Vector2( 0.05, 0.05 )

[node name="AudioPlayer" parent="." instance=ExtResource( 3 )]
volume_db = 0.0
bpm = 117

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.1, 0.1 )
current = true
script = ExtResource( 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )
[connection signal="beat" from="AudioPlayer" to="." method="_on_AudioPlayer_beat"]
[connection signal="measure" from="AudioPlayer" to="." method="_on_AudioPlayer_measure"]
